--- a/boards/arm/sam4s_xplained/sam4s_xplained_defconfig
+++ b/boards/arm/sam4s_xplained/sam4s_xplained_defconfig
@@ -11,3 +11,4 @@ CONFIG_UART_SAM_PORT_0=y
 CONFIG_BOARD_SAM4S_XPLAINED=y
 CONFIG_SOC_ATMEL_SAM4S_EXT_MAINCK=y
 CONFIG_GPIO=y
+CONFIG_WDT_DISABLE_AT_BOOT=y
