--- a/boards/arm/sam_e70_xplained/sam_e70_xplained_defconfig
+++ b/boards/arm/sam_e70_xplained/sam_e70_xplained_defconfig
@@ -13,4 +13,5 @@ CONFIG_SERIAL=y
 CONFIG_USART_SAM=y
 CONFIG_USART_SAM_PORT_1=y
 CONFIG_BOARD_SAM_E70_XPLAINED=y
+CONFIG_WDT_DISABLE_AT_BOOT=y
 CONFIG_BUILD_OUTPUT_HEX=y
