--- a/drivers/hwinfo/Kconfig
+++ b/drivers/hwinfo/Kconfig
@@ -31,7 +31,7 @@ config HWINFO_STM32
 config HWINFO_NRF
 	bool "NRF device ID"
 	default y
-	depends on SOC_FAMILY_NRF
+	depends on SOC_FAMILY_NRF && !TRUSTED_EXECUTION_NONSECURE
 	select HWINFO_HAS_DRIVER
 	help
 	  Enable Nordic NRF hwinfo driver.
