--- a/.github/workflows/board_test_ci.yml
+++ b/.github/workflows/board_test_ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: apt install python3-pip python3-setuptools python3-tk python3-wheel xz-utils file
       shell : bash
     - name : install tool4
-      run: apt install make gcc gcc-multilib g++-multilib libsdl2-dev tabulate
+      run: apt install make gcc gcc-multilib g++-multilib libsdl2-dev
       shell: bash
     - name: install cmake
       run : |
@@ -55,6 +55,9 @@ jobs:
         wget https://github.com/zephyrproject-rtos/sdk-ng/releases/download/v0.11.1/zephyr-sdk-0.11.1-setup.run
         chmod +x zephyr-sdk-0.11.1-setup.run
         ./zephyr-sdk-0.11.1-setup.run -- -d ~/zephyr-sdk-0.11.1
+    - name : install tabulate
+      run: |
+        pip install tabulate
   build:
 
     runs-on: ubuntu-18.04
