codeowners: add subsys/dfu codeowner
Added dfu support subsystem codeowner
Before this subystem was orphaned.

Signed-off-by: Andrzej Puzdrowski <andrzej.puzdrowski@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -400,6 +400,7 @@
 /subsys/canbus/                           @alexanderwachter
 /subsys/cpp/                              @pabigot @vanwinkeljan
 /subsys/debug/                            @nashif
+/subsys/dfu/                              @nvlsianpu
 /subsys/tracing/                          @nashif @wentongwu
 /subsys/debug/asan_hacks.c                @vanwinkeljan @aescolar @daor-oti
 /subsys/disk/disk_access_spi_sdhc.c       @JunYangNXP
